<resources>
    <string name="app_name">MyWeatherApplication</string>
    <string name="humidity">Humidity:</string>
    <string name="precipitation">Precipitation:</string>
    <string name="chance_of_rain">Chance of Rain:</string>
    <string name="wind_chill">Wind Speed:</string>
    <string name="cloud_cover">Cloud Cover:</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="dew_point">Dew Point:</string>
    <string name="pressure">Pressure:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="cityName">City</string>
    <string name="celcius">25°C</string>
    <string name="weatherapplication">WeatherApplication</string>
    <string name="condition">Condition</string>
    <string name="todaysWeather">Today\'s Weather Forecast</string>
    <string name="time">time</string>
    <string name="today">Today...</string>
    <string name="forecast">Forecast</string>
    <string name="search_city">Search City</string>
    <string name="countryName">CountryName</string>
    <string name="dayname">DayName</string>
    <string name="degree">20C</string>
    <string name="descriptionDaily">DescriptionDaily</string>

    <string name="home">Home</string>
    <string name="future_days">Future Days</string>
    <string name="contact_us">Contact Us</string>
    <string name="descriptionweather">DescriptionWeather</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="nextDays">Next Days</string>
    <string name="nextHourly">NextHourly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchcity">SearchCity</string>
    <string name="airquality">AirQuality:</string>
    <string name="co">co:</string>
    <string name="no2">no2:</string>
    <string name="o3">o3:</string>
    <string name="pm2_5">pm2-5:</string>
    <string name="pm10">pm10:</string>
    <string name="so2">so2:</string>

    <string name="night_mode">Night Mode</string>
    <string name="developer_info">Developer Info</string>
    <string name="design_api"><![CDATA[Design & API]]></string>
    <string name="license">License</string>
    <string name="no_internet">Please check internet connection</string>
    <string name="no_city">No city found</string>
    <string name="searchs">Search</string>
    <string name="select_language">Select Language</string>
    <string name="persian">Persian</string>
    <string name="countryname">CountryName</string>
    <string name="english">English</string>
    <string name="text">Light Mode</string>
    <string name="pm_10">pm_10</string>
    <string name="nightmode">NightMode</string>
    <string name="exit">Exit</string>
    <string name="exitMessage">Exit Message</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="applicationinfo">ApplicationInfo</string>
    <string name="share">Share</string>
    <string name="application_info_text">
        <![CDATA[
            <p>
            <b>Weather application</b>
            <br/>
            Version: %1$s
            <br/>
            This application is open source at <br/><a href="https://github.com/elham-68/MyWeatherApp">https://github.com/elham-68/MyWeatherApp</a></p>
        ]]>
    </string>
    <string name="developer_info_text" translatable="false">
        <![CDATA[
            <p>Elham Rezaie</p>
        ]]>
    </string>
    <string name="design_api_text" translatable="false">
        <![CDATA[
            <p>
            <a href="https://lottiefiles.com/user/26177">Lottie & Icon files</a> by jochang
            <br/>
            <a href="http://https://www.weatherapi.com//">WeatherApi</a> Weather API
            </p>
        ]]>
    </string>

    <string name="developer_info_title">Developer Info</string>
    <string name="design_api_title"><![CDATA[Design & API]]></string>
    <string name="libraries_resources_title"><![CDATA[Libraries & Resources]]></string>
    <string name="licence_title">Licence</string>
    <string name="exite_message">Are you want to exit?</string>
    <string name="not_city_found">City Not Found With This Name</string>
    <string name="invalid_apikey">Api Key Is Invalid</string>
    <string name="ok_lable">OK</string>
    <string name="problem_network">Network Connection Problem</string>
    <string name="retry">Retry</string>

</resources>