<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/currentWeather"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:id="@+id/dailyWeather"
        android:title="@string/future_days"
        android:icon="@drawable/ic_baseline_calendar_today_24"/>
    <item android:id="@+id/description"
        android:title="@string/descriptionweather"
        android:icon="@drawable/ic_baseline_dehaze_24"/>

    <item android:title="@string/about">
    <menu>
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"/>
    <item android:id="@+id/contactUs"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_baseline_email_24"/>
    <item android:id="@+id/exit"
        android:title="Exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>

</menu>
    </item>
</menu>