<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphCardView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_gravity="center_horizontal"
            app:neumorph_shadowElevation="@dimen/_2sdp"
            app:neumorph_strokeColor="@color/transparent"
            app:neumorph_shapeType="basin"
            app:neumorph_strokeWidth="@dimen/_2sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="CoutryName"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22sdp" />

                <ImageView
                    android:id="@+id/weather"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center_horizontal" />


                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/celcius"
                    android:textSize="@dimen/_32sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_temp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/condition"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/txt_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/transparent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_6sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_8sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_sunrise"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="@dimen/_36sdp"
                            android:layout_marginLeft="@dimen/_70sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_sunset"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="@dimen/_36sdp"
                            android:layout_marginLeft="@dimen/_60sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_70sdp"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/txt_suset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_40sdp"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/nextHourly"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <soup.neumorphism.NeumorphCardView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center_horizontal"
            app:neumorph_shadowElevation="@dimen/_1sdp"
            app:neumorph_strokeWidth="@dimen/_2sdp"
            app:neumorph_strokeColor="@color/transparent"
            app:neumorph_shapeType="pressed">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="Next_days:"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center_horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_Nextday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/airquality"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <soup.neumorphism.NeumorphCardView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            app:neumorph_strokeColor="@color/transparent"
            app:neumorph_strokeWidth="@dimen/_2sdp"
            app:neumorph_shadowElevation="@dimen/_1sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_4sdp">

                <TextView
                    android:id="@+id/txt_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_no2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no2"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_O3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o3"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_so2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/so2"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/txt_pm2_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm2_5"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/txt_pm_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm_10"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="5"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_co"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_10sdp" />

                <ProgressBar
                    android:id="@+id/progress_no2"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_14sdp" />

                <ProgressBar
                    android:id="@+id/progress_O3"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_14sdp" />
                <ProgressBar
                    android:id="@+id/progress_so2"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_14sdp" />
                <ProgressBar
                    android:id="@+id/progress_pm2_5"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_14sdp" />
                <ProgressBar
                    android:id="@+id/progress_pm_10"
                    style="@style/CustomProgressBarAirQuality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_14sdp" />

            </LinearLayout>
            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>