<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myweatherApplication.example.MyWeatherApplication.ui.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />



    <LinearLayout
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_340sdp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/activity_bg">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_2sdp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                android:layout_marginLeft="@dimen/_6sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_location"
                app:srcCompat="@drawable/ic_baseline_location_on_24"
                android:layout_toLeftOf="@id/txt_city_daily"
                android:layout_marginRight="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_2sdp"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/txt_city_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cityName"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />


        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_country_daily"
            android:text="@string/countryname"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_gravity="center_horizontal"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/weather_daily"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            android:tint="#FFC107"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/moon" />


        <TextView
            android:id="@+id/txt_temp_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/celcius"
            android:textColor="@color/white"
            android:textSize="@dimen/_50sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_description_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_temp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/condition"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
        <TextView
            android:id="@+id/txt_time_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rec_daily"
        android:layout_marginTop="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>