<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context="com.example.weather.ui.activity.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:fabSize="mini"
        app:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:tint="@color/gray_700" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardBg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-18dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/transparent"
        app:strokeWidth="@dimen/_2sdp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">



            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/night_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/nightmode"
                        android:textColor="@color/textColor"/>

                    <LinearLayout
                        android:id="@+id/toggle_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/applicationinfo"
                            android:textColor="@color/darkBlue"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textStyle="bold"
                            android:textSize="@dimen/_16sdp"/>

                        <View
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/btn_info"
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                            app:tint="@color/darkBlue" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/expand_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="gone">


                        <TextView
                            android:id="@+id/text_application_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/developer_info_title" />

                        <TextView
                            android:id="@+id/text_developer_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/design_api_title" />

                        <TextView
                            android:id="@+id/text_design_api"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />





                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>